fixed tab style on safari

--- a/magda-kn-web-app/src/dataset/previewCSV/DataPreviewVis.scss
+++ b/magda-kn-web-app/src/dataset/previewCSV/DataPreviewVis.scss
@@ -23,6 +23,7 @@
 
         button {
             border: none;
+            background: transparent;
             border-bottom: 0.2rem solid $AU-colordark-foreground-action;
             padding: 1rem 1rem;
             font-size: 1rem;
